--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,12 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.40"
+async-trait = "0.1.48"
 bincode = "1.3.2"
 dashmap = "4.0.2"
 futures = "0.3.13"
+futures-timer = "3.0.2"
 pin-project = "1.0.6"
+serde = { version="1.0.125", features=["derive"] }
 sled = "0.34.6"
 tokio = "1.4.0"
