--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ pin-project = "1.0.6"
 serde = { version="1.0.125", features=["derive"] }
 sled = "0.34.6"
 tokio = "1.4.0"
+
+[dev-dependencies]
+async-stream = "0.3.0"
+derive_manifold = { path = "./derive_manifold" }
+tokio = { version = "1.4.0", features = ["full"] }
