--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ futures = "0.3.13"
 futures-timer = "3.0.2"
 pin-project = "1.0.6"
 serde = { version="1.0.125", features=["derive"] }
-sled = "0.34.6"
+sled = { git="https://github.com/rrichardson/sled",  branch="main" }
 tokio = "1.4.0"
 
 [dev-dependencies]
