--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ sled = { git="https://github.com/rrichardson/sled",  branch="main" }
 tokio = "1"
 prost = "0.7"
 bytes = "1"
+byteorder = "1.4.3"
 
 [dev-dependencies]
 async-stream = "0.3"
